--- a/020/facebookAjax/views/index.erb
+++ b/020/facebookAjax/views/index.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Facebook</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <script type="text/javascript" src="scripts.js"></script> 
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script type="text/javascript" src="scripts/scripts.js?t=q"></script> 
 </head>
 <body>
 
@@ -16,13 +16,13 @@
         <img src="images/user.png" class="profilePhoto">
 
         <div class="media__info">
-          <a href="#">Name 1</a>
-          <div>Yesterday at 10:00am</div>
+          <a href="#"></a>
+          <div></div>
         </div>
       </div>
 
       <div class="post__body">
-        <p>Hello world!</p>
+        <p></p>
       </div>
 
       <div class="post__actions">
@@ -34,8 +34,8 @@
 
     <div class="post__details">
       <div class="post__info">
-        <span class="like--count">28 likes</span>
-        <span>3 comments</span>
+        <span class="like--count"></span>
+        <span></span>
       </div>
 
       <div class="post__comments">
@@ -43,14 +43,14 @@
           <img src="images/user.png" class="profilePhoto">
 
           <div class="media__info">
-            <a href="#">Name 1</a>
-            Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+            <a href="#"></a>
+            
 
             <div class="comment__info">
               <a href="#">Like</a>
-              <a href="#">4 replies</a>
-              <span>2 likes</span>
-              Yesterday at 10:00am
+              <a href="#"></a>
+              <span></span>
+              
             </div>
 
             <div class="replies" style="display: none">
@@ -58,14 +58,14 @@
                 <img src="images/user.png" class="profilePhoto">
 
                 <div class="media__info">
-                  <a href="#">Name 1</a>
-                  Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+                  <a href="#"></a>
+                  
 
                   <div class="comment__info">
                     <a href="#">Like</a>
-                    <a href="#">Reply</a>
-                    <span>2 likes</span>
-                    Yesterday at 10:00am
+                    <a href="#"></a>
+                    <span></span>
+                    
                   </div>
                 </div>
               </div>
@@ -74,14 +74,14 @@
                 <img src="images/user.png" class="profilePhoto">
 
                 <div class="media__info">
-                  <a href="#">Name 1</a>
-                  Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+                  <a href="#"></a>
+                  
 
                   <div class="comment__info">
                     <a href="#">Like</a>
-                    <a href="#">Reply</a>
-                    <span>2 likes</span>
-                    Yesterday at 10:00am
+                    <a href="#"></a>
+                    <span></span>
+                    
                   </div>
                 </div>
               </div>
@@ -90,14 +90,14 @@
                 <img src="images/user.png" class="profilePhoto">
 
                 <div class="media__info">
-                  <a href="#">Name 1</a>
-                  Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+                  <a href="#"></a>
+                  
 
                   <div class="comment__info">
                     <a href="#">Like</a>
-                    <a href="#">2 replies</a>
-                    <span>2 likes</span>
-                    Yesterday at 10:00am
+                    <a href="#"></a>
+                    <span></span>
+                    
                   </div>
 
                   <div class="replies" style="display: none">
@@ -105,14 +105,14 @@
                       <img src="images/user.png" class="profilePhoto">
 
                       <div class="media__info">
-                        <a href="#">Name 1</a>
-                        Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+                        <a href="#"></a>
+                        
 
                         <div class="comment__info">
                           <a href="#">Like</a>
-                          <a href="#">Reply</a>
-                          <span>2 likes</span>
-                          Yesterday at 10:00am
+                          <a href="#"></a>
+                          <span></span>
+                          
                         </div>
                       </div>
                     </div>
@@ -121,14 +121,14 @@
                       <img src="images/user.png" class="profilePhoto">
 
                       <div class="media__info">
-                        <a href="#">Name 1</a>
-                        Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+                        <a href="#"></a>
+                        
 
                         <div class="comment__info">
                           <a href="#">Like</a>
-                          <a href="#">Reply</a>
-                          <span>2 likes</span>
-                          Yesterday at 10:00am
+                          <a href="#"></a>
+                          <span></span>
+                          
                         </div>
                       </div>
                     </div>
@@ -151,14 +151,14 @@
                 <img src="images/user.png" class="profilePhoto">
 
                 <div class="media__info">
-                  <a href="#">Name 1</a>
-                  Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+                  <a href="#"></a>
+                  
 
                   <div class="comment__info">
                     <a href="#">Like</a>
-                    <a href="#">Reply</a>
-                    <span>2 likes</span>
-                    Yesterday at 10:00am
+                    <a href="#"></a>
+                    <span></span>
+                    
                   </div>
                 </div>
               </div>
@@ -181,14 +181,14 @@
           <img src="images/user.png" class="profilePhoto">
 
           <div class="media__info">
-            <a href="#">Name 1</a>
-            Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+            <a href="#"></a>
+            
 
             <div class="comment__info">
               <a href="#">Like</a>
-              <a href="#">Reply</a>
-              <span>2 likes</span>
-              Yesterday at 10:00am
+              <a href="#"></a>
+              <span></span>
+              
             </div>
 
             <div class="replies" style="display: none">
@@ -210,14 +210,14 @@
           <img src="images/user.png" class="profilePhoto">
 
           <div class="media__info">
-            <a href="#">Name 1</a>
-            Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+            <a href="#"></a>
+            
 
             <div class="comment__info">
               <a href="#">Like</a>
-              <a href="#">3 replies</a>
-              <span>2 likes</span>
-              Yesterday at 10:00am
+              <a href="#"></a>
+              <span></span>
+              
             </div>
 
             <div class="replies" style="display: none">
@@ -225,14 +225,14 @@
                 <img src="images/user.png" class="profilePhoto">
 
                 <div class="media__info">
-                  <a href="#">Name 1</a>
-                  Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+                  <a href="#"></a>
+                  
 
                   <div class="comment__info">
                     <a href="#">Like</a>
-                    <a href="#">Reply</a>
-                    <span>2 likes</span>
-                    Yesterday at 10:00am
+                    <a href="#"></a>
+                    <span></span>
+                    
                   </div>
                 </div>
               </div>
@@ -241,14 +241,14 @@
                 <img src="images/user.png" class="profilePhoto">
 
                 <div class="media__info">
-                  <a href="#">Name 1</a>
-                  Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+                  <a href="#"></a>
+                  
 
                   <div class="comment__info">
                     <a href="#">Like</a>
-                    <a href="#">3 replies</a>
-                    <span>2 likes</span>
-                    Yesterday at 10:00am
+                    <a href="#"></a>
+                    <span></span>
+                    
                   </div>
 
                   <div class="replies" style="display: none">
@@ -256,14 +256,14 @@
                       <img src="images/user.png" class="profilePhoto">
 
                       <div class="media__info">
-                        <a href="#">Name 1</a>
-                        Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+                        <a href="#"></a>
+                        
 
                         <div class="comment__info">
                           <a href="#">Like</a>
-                          <a href="#">Reply</a>
-                          <span>2 likes</span>
-                          Yesterday at 10:00am
+                          <a href="#"></a>
+                          <span></span>
+                          
                         </div>
                       </div>
                     </div>
@@ -272,14 +272,14 @@
                       <img src="images/user.png" class="profilePhoto">
 
                       <div class="media__info">
-                        <a href="#">Name 1</a>
-                        Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+                        <a href="#"></a>
+                        
 
                         <div class="comment__info">
                           <a href="#">Like</a>
-                          <a href="#">Reply</a>
-                          <span>2 likes</span>
-                          Yesterday at 10:00am
+                          <a href="#"></a>
+                          <span></span>
+                          
                         </div>
                       </div>
                     </div>
@@ -288,14 +288,14 @@
                       <img src="images/user.png" class="profilePhoto">
 
                       <div class="media__info">
-                        <a href="#">Name 1</a>
-                        Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+                        <a href="#"></a>
+                        
 
                         <div class="comment__info">
                           <a href="#">Like</a>
-                          <a href="#">Reply</a>
-                          <span>2 likes</span>
-                          Yesterday at 10:00am
+                          <a href="#"></a>
+                          <span></span>
+                          
                         </div>
                       </div>
                     </div>
@@ -318,14 +318,14 @@
                 <img src="images/user.png" class="profilePhoto">
 
                 <div class="media__info">
-                  <a href="#">Name 1</a>
-                  Donec imperdiet sem leo, id rutrum risus aliquam vitae. Cras tincidunt porta mauris, vel feugiat mauris accumsan eget.
+                  <a href="#"></a>
+                  
 
                   <div class="comment__info">
                     <a href="#">Like</a>
-                    <a href="#">Reply</a>
-                    <span>2 likes</span>
-                    Yesterday at 10:00am
+                    <a href="#"></a>
+                    <span></span>
+                    
                   </div>
                 </div>
               </div>
@@ -385,8 +385,8 @@
     <div class="comment__info">
       <a href="#">Like</a>
       <a href="#">Reply</a>
-      <span></span>
-      Yesterday at 10:00am
+      <span>Yesterday at 10:00am</span>
+      
     </div>
   </div>
 </div>
